# home-inventory

./: .gitignore  README.md
inventory-api/: Cargo.toml  Rocket.toml  inventory_config.toml  logging_config.yaml  shellstart.vbs
inventory-api/src/: db.rs  error.rs  logging.rs  main.rs  prelude.rs
inventory-api/src/utils/: try_froms.rs
inventory-api/web/: index.html  inventory-web-159ed0f180eb9dab795fdc202d49c6c7392c4cadfd953b98eb10c1f5dea7ddefd9158b921f162c18f0ac88b287361250.js
inventory-web/: Cargo.toml  Trunk.toml  index.html
inventory-web/src/: controllers.rs  items_api.rs  main.rs  models.rs  state.rs  style.css
inventory-web/src/components/: dev_tab.rs  dinner_list.rs  grocery_bag.rs  item_category.rs  item_list.rs  item_search.rs  logs.rs  message_box.rs  mod.rs  reinventory.rs  shopping_list.rs
