[package]
name = "inventory-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.37", features = ["serde"] }
config = "0.14.0"
log = "0.4.21"
log4rs = "1.3.0"
rocket = { version = "0.5.0", features = ["json"] }
serde = { version = "1.0.197", features = ["derive"] }
surrealdb = { version = "1.3.1", features = ["kv-mem", "kv-rocksdb"] }
thiserror = "1.0.58"
tokio = { version = "1.37.0", features = ["full"] }
