[package]
name = "inventory-web"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.37", features = ["serde", "wasmbind"] }
gloo-storage = "0.3.0"
log = "0.4.21"
reqwasm = "0.5.0"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.116"
wasm-bindgen-futures = "0.4.42"
wasm-logger = "0.2.0"
web-sys = { version = "0.3.67", features = ["HtmlButtonElement", "HtmlSelectElement", "HtmlCollection", "Element"] }
yew = { version = "0.21.0", features = ["csr"] }
